# Semantis_AI

./: .dockerignore  .gitignore  ADMIN_ACCESS_GUIDE.md  AGENTS.md  ALGORITHM_IMPROVEMENTS_COMPLETE.md  ALGORITHM_IMPROVEMENT_PLAN.md  API_KEY_GENERATION_GUIDE.md  AUTHENTICATION_AND_ADMIN_SETUP.md  AUTHENTICATION_SETUP_COMPLETE.md  AUTHENTICATION_SETUP_PLAN.md  BOLT_AI_AUTH_PROMPT.md  BROWSER_CACHE_CLEAR.md  DATABASE_AND_STORAGE_OVERVIEW.md  DETAILED_PRD.md  FIX_API_KEY_GENERATION.md  Future plan.docx  HOW_TO_ACCESS_ADMIN.md  MVP_STATUS.md  QUICK_ACCESS.md  README.md  RUNNING_SERVICES.md  SEMANTIC_CACHE_IMPROVEMENTS.md  SETUP.md  SYSTEM_STATUS_REPORT.md  Semantis_AI_PRD.docx  docker-compose.yml  package-lock.json  test_all_features.py  test_caching_algorithm.py  test_client_perspective.py  test_production_sdk.py  test_sdk.py  test_sdk_integration.py  test_sdk_working.py
backend/: .env.example  .gitignore  ADMIN_API_DOCUMENTATION.md  ADMIN_DASHBOARD_SUMMARY.md  BOLT_AI_FRONTEND_PROMPT.md  CACHE_MISS_LATENCY_OPTIMIZATIONS.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS.md  LATENCY_OPTIMIZATION_SUMMARY.md  LOGGING_SYSTEM.md  LOGIN_AND_API_KEY_FIXES.md  OPENAPI_ENHANCEMENT.md  PRODUCTION_STORAGE_READY.md  PRODUCTION_STORAGE_SETUP.md  Procfile  README.md  STORAGE_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS.md  USER_ISOLATION_FIX.md  admin_api.py  api_key_generator.py  auth.py  billing.py  cache_persistence.py  cache_warmup.py  check_typo_similarity.py  comprehensive_logging_audit.md  create_admin.py  database.py  encryption.py  improve_similarity_test.py  list_all_users.py  migrate_auth.py  migrate_to_database.py  openapi.json  production_storage.py  prometheus_metrics.py  quick_test.py  redis_cache.py  (+21 more)
docs/: ORGANIZATION_SUMMARY.md  README.md
frontend/: .env.example  Dockerfile  QUICKSTART.md  README.md  package-lock.json  package.json  tailwind.config.js
sdk/python/: README.md  pyproject.toml
sdk/python-wrapper/: LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  PYPI_PUBLISH_GUIDE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  setup.py  test_installation.py  test_pypi_installation.py  test_testpypi.ps1  test_testpypi.sh
sdk/python-wrapper/semantis_ai/: __init__.py  chat.py  client.py  openai_proxy.py  query.py
sdk/python-wrapper/semantis_cache/: __init__.py  base_client.py  chat.py  client.py  openai_proxy.py  query.py
sdk/python-wrapper/semantis_cache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python-wrapper/semantis_cache/integrations/: __init__.py
sdk/python-wrapper/semantis_cache/semantis_ai_semantic_cache_api_client/: __init__.py
sdk/python-wrapper/semantis_cache/semantis_ai_semantic_cache_api_client/api/default/: get_events_events_get.py  get_metrics_metrics_get.py  health_health_get.py
sdk/python/semantis/: __init__.py  client.py  models.py
sdk/python/semantis_ai_semantic_cache_api_client/api/default/: openai_compatible_v1_chat_completions_post.py  simple_query_query_get.py
sdk/python/semantis_ai_semantic_cache_api_client/models/: __init__.py  chat_message.py  chat_request.py
testsprite_tests/: COMPREHENSIVE_ENDPOINT_AUDIT.md  TC001_health_endpoint_returns_service_status.py  TC002_metrics_endpoint_returns_cache_performance_metrics.py  TC003_query_endpoint_returns_cached_or_fresh_answer.py  standard_prd.json  (+8 more)
(+117 files in other folders)
