[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantis-cache"
version = "1.0.0"
description = "Semantis Cache - Semantic Caching SDK for LLM Applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Semantis AI", email = "support@semantis.ai"}
]
keywords = ["semantic caching", "llm", "openai", "cache", "ai", "semantic search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Documentation = "https://docs.semantis.ai"
Source = "https://github.com/semantis-ai/semantis-cache-python"
Issues = "https://github.com/semantis-ai/semantis-cache-python/issues"

[tool.setuptools]
packages = ["semantis_cache", "semantis_ai"]

[tool.setuptools.package-data]
semantis_cache = ["py.typed"]
semantis_ai = ["py.typed"]

